footers final cambios de font limpieza

--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -42,6 +42,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
     <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -126,7 +130,7 @@
         <!--Section descripcion-->
 
         <p class="text-center w-responsive mx-auto mb-5">Hola, ¿Tienes alguna idea? ¿Necesitas ilustraciones para tu
-            proyectos creativos?, o simplemente deseas saludar. Déjame tu mensaje por acá</p>
+            proyectos creativos?, o simplemente deseas saludar. Deja tu mensaje por acá</p>
 
 
 
@@ -251,6 +255,8 @@
 
 
     <footer>
+
+        <h2 class="footercta">Sígueme en todas las redes</h2>
 
 
 
