--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -41,6 +41,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
     <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -142,13 +146,14 @@
             <p>
                 Marie también se dedica a ser Productora de videos animados 2d y novelas gráficas en idioma inglés para
                 FANTOONS Animation Studio basado en Los Angeles, California. Con ellos ha tenido la oportunidad de
-                producir videos animados para <a href="https://www.youtube.com/watch?v=R5Q1yVLSR3I" target="_blank">Frank Zappa</a>, <a
-                    href="https://www.youtube.com/watch?v=UlCy_ZDK_k0" target="_blank">Bing Crosby</a> , y material merch para bandas
+                producir videos animados para <a href="https://www.youtube.com/watch?v=R5Q1yVLSR3I"
+                    target="_blank">Frank Zappa</a>, <a href="https://www.youtube.com/watch?v=UlCy_ZDK_k0"
+                    target="_blank">Bing Crosby</a> , y material merch para bandas
                 como <a href="https://www.fantoons.shop/categories/rush" target="_blank">Rush</a>.
             </p>
             <p>
                 Fuera de ello tiene un gran interés por los museos, los videojuegos, el género de horror en el cine y el
-                arte generativo producido a traves del creative coding y A.I..
+                arte generativo producido a traves del creative coding y A.I.. Actualmente estoy realizando cursos de desarrollo web con Coderhouse, y subiendo mis proyectos a mi repositorio de <a href="https://github.com/MarieObando/portfoliomarie-3" target="_blank">Github</a>.
             </p>
 
 
@@ -292,6 +297,8 @@
 
 
     <footer>
+
+        <h2 class="footercta">Sígueme en todas las redes</h2>
 
 
 
