--- a/pagessection/proyectos.html
+++ b/pagessection/proyectos.html
@@ -46,6 +46,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
     <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -179,6 +183,8 @@
     </section>
 
     <footer>
+
+        <h2 class="footercta">Sígueme en todas las redes</h2>
 
 
 
