--- a/html-tienda-items/compra1.html
+++ b/html-tienda-items/compra1.html
@@ -39,6 +39,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
   <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -142,6 +146,55 @@
 
 
   </section>
+
+  <footer>
+
+
+    <h2 class="footercta">Sígueme en todas las redes</h2>
+
+
+
+    <div class="container text-center">
+        <div class="row animate__animated animate__fadeIn">
+            <div class="col">
+
+                <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
+                    <img src="../icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
+
+                </a>
+
+            </div>
+            <div class="col">
+
+
+                <a href="https://www.facebook.com/MariemObando" target="_blank">
+                    <img src="../icon/facebookicon.png" class="img-fluid" alt="facebookicon">
+                </a>
+
+
+
+            </div>
+            <div class="col">
+
+
+                <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
+                    <img src="../icon/artsicon.png" class="img-fluid" alt="artstationicon">
+                </a>
+
+            </div>
+
+            <div class="p-8">
+                <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+
+</footer>
 
 
 
