--- a/item-galeria/obra5.html
+++ b/item-galeria/obra5.html
@@ -24,6 +24,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
   <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -57,7 +61,7 @@
 
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Regresar a Inicio</a>
+          <!-- <a class="navbar-brand" href="../index.html">Regresar a Inicio</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -125,6 +129,56 @@
 
 
   </section>
+
+
+  <footer>
+
+
+    <h2 class="footercta">Sígueme en todas las redes</h2>
+
+
+
+    <div class="container text-center">
+        <div class="row animate__animated animate__fadeIn">
+            <div class="col">
+
+                <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
+                    <img src="../icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
+
+                </a>
+
+            </div>
+            <div class="col">
+
+
+                <a href="https://www.facebook.com/MariemObando" target="_blank">
+                    <img src="../icon/facebookicon.png" class="img-fluid" alt="facebookicon">
+                </a>
+
+
+
+            </div>
+            <div class="col">
+
+
+                <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
+                    <img src="../icon/artsicon.png" class="img-fluid" alt="artstationicon">
+                </a>
+
+            </div>
+
+            <div class="p-8">
+                <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+
+</footer>
 
 
 
