--- a/pagessection/tienda.html
+++ b/pagessection/tienda.html
@@ -44,6 +44,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+
 
   <!-- ESTO ES LINK DE LINKEAR LIBRERIAS DE CSS ANIMACION CON NUESTRO DOCUMENTO-->
 
@@ -118,7 +122,7 @@
 
   </section>
 
-  
+
 
 
   <section>
@@ -213,6 +217,8 @@
   </section>
 
   <footer>
+
+    <h2 class="footercta">Sígueme en todas las redes</h2>
 
     <div class="container text-center">
       <div class="row animate__animated animate__fadeIn">
